# CloudResumeChallangeAzure

./: .gitignore  404.html  README.md  counter.js  index.html  package-lock.json  package.json  pyproject.toml  resume.html
website/: 404.html  index.html
