[tool.poetry]
name = "cloudresumechallangeazure"
version = "0.1.0"
description = "Sample Cloud Resume Challange to get farmilar with Azure"
authors = ["Gianncarlo Giannattasio <GianncarloG@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
